[package]
name = "mca-parser"
version = "0.0.3"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/funnyboy-roks/mca-parser"
repository = "https://github.com/funnyboy-roks/mca-parser"
description = "A simple library for parsing Minecraft's .mca format"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
fastnbt = "2.3.2"
miniz_oxide = "0.7.1"
serde = "1.0.152"
