[package]
name = "mca-parser"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/funnyboy-roks/mca-parser"
repository = "https://github.com/funnyboy-roks/mca-parser"
description = "A library for parsing Minecraft's region files"

[dependencies]
fastnbt = "2.3.2"
miniz_oxide = "0.7.1"
serde = "1.0.152"
