[package]
name = "mca-parser"
version = "1.0.2"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/funnyboy-roks/mca-parser"
repository = "https://github.com/funnyboy-roks/mca-parser"
description = "A library for parsing Minecraft's region files"
documentation = "https://docs.rs/mca-parser"

[dependencies]
fastnbt = "2.3.2"
miniz_oxide = "0.7.1"
serde = "1.0.152"
